[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epostak"
version = "0.8.1"
description = "Official Python SDK for the ePostak API - Peppol e-invoicing for Slovakia and the EU"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "ePostak", email = "info@epostak.sk" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["epostak", "peppol", "e-invoicing", "ubl", "slovakia"]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://epostak.sk"
Documentation = "https://epostak.sk/api/docs"
Repository = "https://github.com/epostak/epostak-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["src/epostak"]
